# iflycode-2api

./: .gitignore  Dockerfile  README.md  apply_protocol_fixes.py  package-lock.json  package.json  pyproject.toml
docs/: index.md
docs/.vitepress/: config.mts
docs/superpowers/plans/: 2026-04-29-proxy-enhancement.md  2026-04-30-chat-playground.md  2026-05-02-account-stats-enhancement.md  2026-05-02-account-ui-enhancement.md  2026-05-02-comprehensive-test-suite.md  2026-05-02-model-catalog.md  2026-05-02-service-daemon-mode.md  2026-05-03-protocol-translation-fix-and-model-capabilities.md  2026-07-07-quota-management-batch-import.md
iflycode_2api/: __init__.py  anthropic_handler.py  auth.py  auth_middleware.py  cli.py  client.py  credential_router.py  crypto.py  daemon.py  db.py  janitor.py  keepalive.py  openai_handler.py  proxy_logger.py  quota.py  server.py  sessions.py  truncate.py  web_api.py  xunfei_cc.py
iflycode_2api/static/: index.html
iflycode_2api/static/assets/: AccountDetail-CqO4wG6v.js  Accounts-BrCdrPBX.js  ActionButton-CdLZLc8F.js  AreaChart-Cqg-EDtx.js  Chat-D_xNYNko.js  Dashboard-CpAz4dNx.js  (+15 more)
iflycode_proxy/: anthropic_handler.py  auth.py  auth_middleware.py  cli.py  client.py  credential_router.py  crypto.py  daemon.py  db.py  janitor.py  keepalive.py  openai_handler.py  proxy_logger.py  quota.py  server.py  sessions.py  truncate.py  web_api.py  xunfei_cc.py
tests/: mock_upstream.py  test_batch_import.py  test_credential.py  test_db.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  api.ts  main.tsx
(+13 files in other folders)
