[project]
name = "iflycode-proxy"
version = "1.0.0"
description = "iFlyCode OpenAI-compatible proxy with account pool"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "httpx>=0.28",
    "click>=8.2",
    "sse-starlette>=2.2",
    "rich>=13.7",
    "cryptography>=44.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.3", "pytest-asyncio>=0.24"]

[project.scripts]
iflycode-proxy = "iflycode_proxy.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.backends"
