[project]
name = "iflycode-2api"
version = "1.0.0"
description = "iFlyCode OpenAI-compatible 2API with account pool"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "httpx>=0.28",
    "click>=8.2",
    "sse-starlette>=2.2",
    "rich>=13.7",
    "cryptography>=44.0",
    "openai>=1.0",
    "pyjwt>=2.0",
    "bcrypt>=3.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.3", "pytest-asyncio>=0.24"]

[project.scripts]
iflycode-2api = "iflycode_2api.cli:cli"
xunfei-cc = "iflycode_2api.xunfei_cc:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
